add shadow to items, apply ui feedback recommendation to make index.js background darker than image cards

--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -6,6 +6,11 @@
   border-style: solid;
   border-radius: 8px;
   max-width: fit-content;
+  background-color:#FFFFFF;
+
+  &:hover {
+    box-shadow: 10px 10px 5px darkgray;
+  }
 }
 
 .photo-list__image {
