--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   margin-bottom: -30px;
   border-width: 0.1px;
-  background-color: #EEEEEE;
+  background-color: #eeeeee;
   width: 32px;
   height: 32px;
   text-align: center;
@@ -15,4 +15,8 @@
 .photo-list__fav-icon-svg {
   padding: 7px;
   top: 2px;
+}
+
+.color {
+  color: rgb(13, 214, 13);
 }
