--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -18,4 +18,9 @@
   color: #111;
   text-underline-position: auto;
   margin-left: 24px;
+  &:hover {
+    text-decoration: overline;
+    color: #111;
+    font-weight: bolder;
+  }
 }
