--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -1,9 +1,11 @@
 .photo-list {
   display: flex;
+  flex-direction: column;
+  align-content: center;
   flex-wrap: wrap;
   justify-content: space-between;
   list-style-type: none;
-  margin: 0;
+  margin-top: 90px;
   padding: 0;
 }
 
