--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -2,13 +2,25 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 1;
   padding: 8px;
   align-items: center;
   -webkit-box-shadow: 0 4px 6px -6px #222;
   -moz-box-shadow: 0 4px 6px -6px #222;
   box-shadow: 0 4px 6px -6px #222;
   height: 72px;
+  width: 100%;
   background-color: #FFFFFF;
+
+  .top-nav-bar__topics {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-right: 40px;
+    gap: 24px
+  }
 }
 
 .top-nav-bar__logo {
